[gd_scene load_steps=3 format=3 uid="uid://5n8cqrdhlye8"]

[ext_resource type="Script" path="res://fishing.gd" id="1_m4xou"]
[ext_resource type="PackedScene" uid="uid://bibg3h6b8787w" path="res://character.tscn" id="2_hxm78"]

[node name="Fishing" type="Node2D" node_paths=PackedStringArray("fishing_rod")]
script = ExtResource("1_m4xou")
fishing_rod = NodePath("FishRod")

[node name="Sky" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.231373, 0.886275, 1, 1)

[node name="Ground" type="ColorRect" parent="."]
offset_top = 256.0
offset_right = 128.0
offset_bottom = 360.0
color = Color(0.941176, 0.898039, 0.423529, 1)

[node name="Ocean" type="ColorRect" parent="."]
offset_left = 128.0
offset_top = 256.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.168627, 0.67451, 0.741176, 1)

[node name="Character" parent="." instance=ExtResource("2_hxm78")]
z_index = 1
position = Vector2(80, 200)

[node name="FishRod" type="Line2D" parent="."]
z_index = 2
points = PackedVector2Array(128, 240, 136, 192)
width = 5.0
default_color = Color(0.501961, 0.317647, 0.188235, 1)

[node name="FishingBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 640.0
offset_bottom = 80.0

[node name="FishBarBG" type="ColorRect" parent="FishingBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.466667, 0.670588, 1)

[node name="GoodMargin" type="ColorRect" parent="FishingBar"]
layout_mode = 0
offset_left = 47.0
offset_right = 79.0
offset_bottom = 56.0
color = Color(0.4, 0.658824, 0.368627, 1)

[node name="TimingBar" type="ColorRect" parent="FishingBar"]
layout_mode = 2
offset_left = 61.0
offset_top = 24.0
offset_right = 65.0
offset_bottom = 49.0
color = Color(1, 0.811765, 0.25098, 1)

[node name="MarginContainer" type="MarginContainer" parent="FishingBar"]
layout_mode = 0
offset_left = 62.0
offset_right = 584.0
offset_bottom = 56.0
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="FishingBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 62

[node name="TickMarker" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker2" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker3" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker4" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker5" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker6" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker7" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker8" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TickMarker9" type="ColorRect" parent="FishingBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="InfoLabel" type="Label" parent="."]
offset_left = 112.0
offset_top = 88.0
offset_right = 152.0
offset_bottom = 111.0

[node name="FishRemainingLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 272.0
offset_right = 56.0
offset_bottom = 295.0
text = "5 / 5"

[node name="FinishFishingButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 320.0
offset_right = 24.0
offset_bottom = 328.0
text = "Finish early"

[connection signal="pressed" from="FinishFishingButton" to="." method="_on_finish_fishing_button_pressed"]
